plantaciones/force-app/main/default/objects/Lead/fields/Follow_Up_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Outcome__c</fullName>
    <description>Defines the result of the follow-up process when the lead is not immediately sales-ready.</description>
    <inlineHelpText>Use this field only when the Lead Status is Follow Up. 
Select Success if the follow-up leads to conversion, or No Success if the lead moves to nurturing.</inlineHelpText>
    <label>Follow Up Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>No Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>