plantaciones/force-app/main/default/objects/Lead/fields/Interested__c.field-meta.xml
<CustomField>
    <fullName>Interested__c</fullName>
    <description>Indicates whether the lead has expressed explicit interest in the product.</description>
    <inlineHelpText>Select Yes if the lead has shown clear interest in purchasing or receiving product information. Select No if the lead is not interested.</inlineHelpText>
    <label>Interested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>