plantaciones/force-app/main/default/objects/Lead/fields/Next_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Date__c</fullName>
    <description>Indicates the next scheduled follow-up date when the lead is in active follow-up status. Used to differentiate between Follow and Nurturing states.</description>
    <label>Next Follow Up Date</label>
    <type>Date</type>
</CustomField>