plantaciones/force-app/main/default/objects/Lead/fields/Reactivated__c.field-meta.xml
<CustomField>
    <fullName>Reactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a lead previously in nurturing has shown renewed interest and should be re-evaluated.</description>
    <inlineHelpText>Check this box when a lead in Nurturing status re-engages and requires requalification.</inlineHelpText>
    <label>Reactivated</label>
    <type>Checkbox</type>
</CustomField>