plantaciones/force-app/main/default/objects/Lead/fields/Sales_Assisted__c.field-meta.xml
<CustomField>
    <fullName>Sales_Assisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Lead requires sales-assisted handling (premium journey).
Sales-assisted leads follow the commercial pipeline and may generate an Opportunity.</description>
    <inlineHelpText>Check this for premium requests (subscriptions, special packs, high-value orders, or campaign-driven assisted journeys).</inlineHelpText>
    <label>Sales_Assisted</label>
    <type>Checkbox</type>
</CustomField>