plantaciones/force-app/main/default/objects/Lead/fields/Sales_Ready__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ready__c</fullName>
    <description>Indicates whether the lead is considered ready for immediate sales conversion.</description>
    <inlineHelpText>Select Yes when the lead is ready to proceed to opportunity creation. Select No if further qualification or follow-up is required.</inlineHelpText>
    <label>Sales Ready</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>