plantaciones/force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <description>Specifies the reason why the lead was closed as unqualified.</description>
    <inlineHelpText>Required when Lead Status is Unqualified. 
Select the most accurate reason explaining why the lead was not converted.</inlineHelpText>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Invalid email / wrong data</fullName>
            </value>
            <value>
                <fullName>SLA exceeded</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>