plantaciones/force-app/main/default/objects/Lead/validationRules/Require_Follow_Up_Date_When_Follow.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Follow_Up_Date_When_Follow</fullName>
    <active>true</active>
    <description>Ensures that a follow-up date is defined when the Lead status is set to Follow Up, enforcing active lead management discipline.</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Status, &quot;Follow Up&quot;),
 ISBLANK(Next_Follow_Up_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Next_Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Next Follow Up Date is required when the Lead status is Follow.</errorMessage>
</ValidationRule>