plantaciones/force-app/main/default/objects/Lead/validationRules/Require_Unqualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Unqualified_Reason</fullName>
    <active>true</active>
    <description>Ensures that a reason is provided when a lead is marked as Unqualified.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Unqualified&quot;),
    ISBLANK(TEXT(Unqualified_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
    <errorMessage>Unqualified Reason is required when Lead Status is Unqualified.</errorMessage>
</ValidationRule>